crates/vize_croquis/src/virtual_ts/snapshots/vize_croquis__virtual_ts__tests__snapshot_full_sfc.snap
---
source: crates/vize_croquis/src/virtual_ts/mod.rs
expression: output.content
---
// Virtual TypeScript for Vue SFC type checking
// Generated by vize_croquis

// Module-level imports
import { ref } from 'vue'

// Setup scope (function)
function __setup() {
  // Compiler macros (setup-scope only, actual functions not declare)
  function defineProps<T>(): T { return undefined as unknown as T; }
  function defineEmits<T>(): T { return undefined as unknown as T; }
  function defineExpose<T>(exposed?: T): void { }
  function defineOptions<T>(options: T): void { }
  function defineSlots<T>(): T { return undefined as unknown as T; }
  function defineModel<T>(name?: string, options?: { required?: boolean, default?: T }): import('vue').ModelRef<T> { return undefined as unknown as import('vue').ModelRef<T>; }
  function withDefaults<T, D extends Partial<T>>(props: T, defaults: D): T & D { return undefined as unknown as T & D; }
  const $event: Event = undefined as unknown as Event;
  function useTemplateRef<T extends Element | import('vue').ComponentPublicInstance = Element>(key: string): import('vue').ShallowRef<T | null> { return undefined as unknown as import('vue').ShallowRef<T | null>; }
  
  // User setup code
  
  const count = ref(0)
  const increment = () => count.value++
  
  // Template scope (inherits from setup)
  (function __template() {
    // Template refs (auto-unwrapped)
    const __unwrapped_count = count.value;
    
    // Template expressions
    const __expr_0 = increment;
    const __expr_1 = count;
  })();
}

// Invoke setup
__setup();
