crates/vize_croquis/src/virtual_ts/snapshots/vize_croquis__virtual_ts__tests__snapshot_generic_setup.snap
---
source: crates/vize_croquis/src/virtual_ts/mod.rs
expression: output.content
---
// Virtual TypeScript for Vue SFC type checking
// Generated by vize_croquis

// Module-level imports

// Setup scope (function)
function __setup<T extends { id: string }>() {
  // Compiler macros (setup-scope only, actual functions not declare)
  function defineProps<T>(): T { return undefined as unknown as T; }
  function defineEmits<T>(): T { return undefined as unknown as T; }
  function defineExpose<T>(exposed?: T): void { }
  function defineOptions<T>(options: T): void { }
  function defineSlots<T>(): T { return undefined as unknown as T; }
  function defineModel<T>(name?: string, options?: { required?: boolean, default?: T }): import('vue').ModelRef<T> { return undefined as unknown as import('vue').ModelRef<T>; }
  function withDefaults<T, D extends Partial<T>>(props: T, defaults: D): T & D { return undefined as unknown as T & D; }
  const $event: Event = undefined as unknown as Event;
  function useTemplateRef<T extends Element | import('vue').ComponentPublicInstance = Element>(key: string): import('vue').ShallowRef<T | null> { return undefined as unknown as import('vue').ShallowRef<T | null>; }
  type __Props = <{
  items: T[]
  selected?: T
}>;
  type __Emits = <{
  (e: 'select', item: T): void
}>;
  
  // User setup code
  
  const props = defineProps<{
    items: T[]
    selected?: T
  }>()
  
  const emit = defineEmits<{
    (e: 'select', item: T): void
  }>()
}

// Invoke setup
__setup();
